content/_sass/partials/home/_features.scss
.features-grid {
  display: grid;
  gap: 32px;
  grid-template-columns: repeat(auto-fit, 1fr);
  margin: 2rem auto 3rem;
  padding: 0 5%;
}

@include media-breakpoint-up(sm) {
  .features-grid {
    padding: 0 3%;
  }
}

@include media-breakpoint-up(md) {
  .features-grid {
    // grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    gap: 56px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    padding: 0;
  }
}

@include media-breakpoint-up(lg) {
  .features-grid {
    gap: 49px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    padding: 0 2%;
  }
}

@include media-breakpoint-up(xl) {
  .features-grid {
    // gap: 20px;
    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 36px;
    grid-template-columns: repeat(4, 1fr);
    padding: 0;
  }
}

@include media-breakpoint-up(xl-13) {
  .features-grid {
    gap: 30px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    padding: 0;
  }
}

@include media-breakpoint-up(xxl) {
  .features-grid {
    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 49px;
    grid-template-columns: repeat(4, 1fr);
    padding: 0 4%;
  }
}

.feature-item {
  align-items: center;
  box-shadow: 0 6px 15px $box-shadow--color;
  display: flex;
  flex-flow: column wrap;
  margin: 0;
  padding: 12px;
  text-align: center;
  width: 100%;

  @include hide-anchor-symbols;
}

@include media-breakpoint-up(md) {
  .feature-title {
    font-size: 1.3rem;
    height: 3rem;
    overflow-wrap: break-word;
    word-break: normal;
  }
}

@include media-breakpoint-up(lg) {
  .feature-title {
    font-size: 1.63rem;
    height: 4rem;
  }
}

// Attempt fix for reproducibility icon covering text @ 1366x768
@include media-breakpoint-up(xl-13) {
  .feature-title {
    clear: both;
  }

  .feature-img {
    clear: both;
    height: 100px;
    max-width: 100%;
    object-fit: contain;
    width: 100px;
  }
}

// Temporary hack, until the actual icon file is resized
.open-and-free {
  .feature-img {
    height: 70px;
    margin: 15px 0;
    width: 70px;
  }
}

